Fix patch error,inability to mark todo done

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -4,9 +4,9 @@ service:
 plugins:
   - serverless-iam-roles-per-function
   - serverless-reqvalidator-plugin
-  - serverless-webpack
   - serverless-aws-documentation
-
+  - serverless-webpack
+ 
 package:
   individually: true
 
@@ -34,18 +34,6 @@ provider:
         - codedeploy:*
       Resource:
         - '*'
-
-custom:
-  documentation:
-    api:
-      info:
-        version: v1.0.0
-        title: Udacity-Todo-Severless
-        description: serverless todo app for the udacity cloud nanodegree
-    models:
-      - name: TodoRequest
-        contentType: application/json
-        schema: ${file(src/models/create-todo-request.json)}
 
 functions:
   Auth:
@@ -86,13 +74,9 @@ functions:
           cors: true
           method: post
           path: todos
-          reqValidatorName: RequestBodyValidator
-          documentation:
-            summary: Create a new todo
-            description: Create a new todo
-            requestModels:
-              'application/json': TodoRequest
-
+          request:
+            schema:
+              application/json: ${file(src/models/create-todo-request.json)}
     iamRoleStatements:
       - Effect: Allow
         Action:
@@ -113,13 +97,9 @@ functions:
           cors: true
           method: patch
           path: todos/{todoId}
-          reqValidatorName: RequestBodyValidator
-          documentation:
-            summary: update a todo
-            description: update a todo
-            requestModels:
-              'application/json': TodoRequest
-
+          request:
+            schema:
+              application/json: ${file(src/models/update-todo-request.json)
     iamRoleStatements:
       - Effect: Allow
         Action:
@@ -140,7 +120,6 @@ functions:
           cors: true
           method: delete
           path: todos/{todoId}
-
     iamRoleStatements:
       - Effect: Allow
         Action:
